<resources>
    <string name="app_name">EstacionaJuntos</string>
    <string name="txtCadastrar">CADASTRAR</string>
    <string name="txtEntrar">ENTRAR</string>
    <string name="txtEsqueceuSenha">Esqueceu sua senha?</string>
    <string name="hintNome">Nome</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password*</string>
    <string name="hintSenha">Senha</string>
    <string name="txtNewsletter">Eu gostaria de receber Newsletters do aplicativo e outras informações promocionais.</string>
    <string name="txtSenhaAlert">* Senha deve conter pelo menos 6 caracteres, com uma letra maiúscula e um número.</string>
    <string name="titleCadastrar">Cadastrar</string>
    <string name="titleEntrar">Login</string>
    <string name="queryHint">Encontrar Estacionamento</string>
    <string name="txtOrdenar">Ordenar por</string>
    <string name="txtFiltrar">Filtrar por</string>
    <string name="txtMenorPreco">Menor Preço</string>
    <string name="txtMaiorPreco">Maior Preço</string>
    <string name="txtMelhorAv">Melhor Avaliação</string>
    <string name="txtMenorDistancia">Menor Distância</string>
    <string name="txtEspacoAb">Espaço Aberto</string>
    <string name="txtFuncionamento">Funcionamento 24H</string>
    <string name="txtDisponibilidade">Disponibilidade</string>
    <string name="txtBuscar">Buscar</string>
    <string name="txtFiltrarHome">Filtrar</string>
    <string name="txtOrdenarHome">Ordenar</string>
    <string name="descStar">Ícone de estrela</string>
    <string name="descFoto">Foto do Lugar</string>
    <string name="descMarker">Ícone de Marcador</string>
    <string name="descMoney">Ícone de Dinheiro</string>
    <string name="descClock">Ícone de Relógio</string>
    <string name="descCar">Ícone de Carro</string>
    <string name="descMoto">Ícone de Moto</string>
    <string name="txtMostrarMapa">Mostrar no Mapa</string>
    <string name="descVoltar">Ícone de Voltar</string>
    <string name="descMenu">Ícone de Menu</string>
    <string name="descConta">Ícone de Conta</string>
</resources>