<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".OrderFragment"
    android:orientation="vertical">

    <TextView android:id="@+id/lblOrdenar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtOrdenar"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <RadioGroup android:id="@+id/rdgOrdenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton android:id="@+id/rdbMenorPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMenorPreco"
            android:textSize="16sp"/>

        <RadioButton android:id="@+id/rdbMaiorPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMaiorPreco"
            android:textSize="16sp"/>

        <RadioButton android:id="@+id/rdbMelhorAv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMelhorAv"
            android:textSize="16sp"/>

        <RadioButton android:id="@+id/rdbMenorDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMenorDistancia"
            android:textSize="16sp"/>
    </RadioGroup>

    <Button android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBuscar"
        android:textSize="18sp"
        android:backgroundTint="@color/darkBlue"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

</LinearLayout>