<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        app:title="@string/app_name"/>

    <androidx.appcompat.widget.SearchView android:id="@+id/searchHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/searchview_bg"
        app:defaultQueryHint="@string/queryHint"
        app:iconifiedByDefault="false"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btnOrdenarHome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtOrdenarHome"
            android:backgroundTint="@color/darkBlue"
            android:layout_marginStart="8dp"
            android:layout_alignParentStart="true"/>

        <Button android:id="@+id/btnFiltrarHome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtFiltrarHome"
            android:backgroundTint="@color/darkBlue"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


</LinearLayout>